fixing photo size on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -24,3 +24,14 @@
     box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em, rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
     transform: translateY(-3px) scale(1.05);
  }
+
+ /* @media screen and (min-width: 600px) {
+    .card {
+
+    transform: scale(0.78);
+    }
+    .card:hover {
+        transform: translateY(-3px) scale(1);
+
+    }
+ } */
