--- a/css/image-grid.css
+++ b/css/image-grid.css
@@ -114,8 +114,8 @@ label #cancel {
     gap: 0.2rem;
     padding: 0;
     margin-top: 0.3rem;
-    grid-template-columns: repeat(auto-fit, minmax(390px, 1fr));
-    grid-auto-rows: 390px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-rows: 200px;
   }
 
   #card {
